--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ rss_icon: true
 
 navbar_fixed: true
 footer_fixed: true
-search_enabled: true
+search_enabled: false #@ modified
 socials_in_search: true
 bib_search: true
 
